--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
   </head>
   <body>
-  <section class="section">
+  <section class="section hero is-fullheight is-info">
     <div class="container">
       <h1 class="title">
         Hello World
